--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mocha": "^8.1.3",
-		"nodemon": "^2.0.15"
+		"mongoose": "^6.2.10"
 	},
 	"repository": {
 		"type": "git",
@@ -27,5 +27,8 @@
 		"freeCodeCamp",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.15"
+	}
 }
